package game;

public enum ShipType
{
    PATROL,
    SUPER_PATROL,
    DESTROYER,
    BATTLESHIP,
    CARRIER,
    SUPER_PATROL_FRONT,
    SUPER_PATROL_BACK,
    DESTROYER_FRONT,
    DESTROYER_MID,
    DESTROYER_BACK,
    BATTLESHIP_FRONT,
    BATTLESHIP_FRONT_MID,
    BATTLESHIP_BACK_MID,
    BATTLESHIP_BACK,
    CARRIER_FRONT,
    CARRIER_FRONT_MID,
    CARRIER_MID,
    CARRIER_BACK_MID,
    CARRIER_BACK,
    SHIP_DESTROYED
}
