package game;

public class Vector2
{
	public int x;
	public int y;
	
	public Vector2(int x, int y)
	{
		this.x = x;
		this.y = y;
	}
}
