package game.core;

public interface IUpdatable
{
    void update(long elapsedMillis);
}
