package game;

public class Enemy extends Player
{

    public Enemy(String name, Match match)
    {
        super(name, match);
    }
}
