package game;

public enum Result 
{
    WIN_RIGHT,
    WIN_LEFT,
    TIE
}
